Mods to templates

--- a/MVC/Views/BlogPost/Detail.DetailPage.cshtml
+++ b/MVC/Views/BlogPost/Detail.DetailPage.cshtml
@@ -4,26 +4,23 @@
 @using Telerik.Sitefinity.Frontend.Mvc.Helpers;
 @using Telerik.Sitefinity.Web.DataResolving;
 
-<div class="@Model.CssClass" @Html.InlineEditingAttributes(Model.ProviderName, Model.ContentType.FullName, (Guid)Model.Item.Fields.Id)>
-    <h3>
-        <span @Html.InlineEditingFieldAttributes("Title", "ShortText")>@Model.Item.Fields.Title</span>
-    </h3>
-
-    <div>
-        @Model.Item.GetDateTime("PublicationDate", "MMM d, yyyy, HH:mm tt")
-        @Html.Resource("By")
-        @DataResolver.Resolve(@Model.Item.DataItem, "Author", null)
-        @Html.CommentsCount(string.Empty, @Model.Item.DataItem)
-    </div>
-    
-    <div @Html.InlineEditingFieldAttributes("Summary", "LongText")>@Html.Raw(Model.Item.Fields.Summary)</div>
-
-    <div @Html.InlineEditingFieldAttributes("Content", "LongText")>@Html.Raw(Model.Item.Fields.Content)</div>
-    
-    @if (Model.EnableSocialSharing)
-    {
-        @Html.SocialShareOptions()
-    }
-
+<article class="post_itm @Model.CssClass" @Html.InlineEditingAttributes(Model.ProviderName, Model.ContentType.FullName, (Guid)Model.Item.Fields.Id)>
+    <header>
+        <h1 class="post_itm-hdg" @Html.InlineEditingFieldAttributes("Title", "ShortText" )>@Model.Item.Fields.Title</h1>
+        <div class="post_itm-meta">
+            <div>
+                @Model.Item.GetDateTime("PublicationDate", "MMM d, yyyy, HH:mm tt")
+                @Html.Resource("By")
+                @DataResolver.Resolve(@Model.Item.DataItem, "Author", null)
+            </div>
+            @Html.CommentsCount(string.Empty, @Model.Item.DataItem)
+        </div>
+        @if (Model.EnableSocialSharing)
+        {
+            @Html.SocialShareOptions()
+        }
+        <div @Html.InlineEditingFieldAttributes("Summary", "LongText" ) class="post_itm-desc callout">@Html.Raw(Model.Item.Fields.Summary)</div>
+    </header>
+    <div @Html.InlineEditingFieldAttributes("Content", "LongText" ) class="post_itm-content">@Html.Raw(Model.Item.Fields.Content)</div>
     @Html.CommentsList(@Model.Item.DataItem)
-</div>
+</article>
