--- a/MVC/Views/BlogPost/List.BlogPostList.cshtml
+++ b/MVC/Views/BlogPost/List.BlogPostList.cshtml
@@ -4,28 +4,46 @@
 @using Telerik.Sitefinity.Frontend.Mvc.Helpers;
 @using Telerik.Sitefinity.Modules.Pages;
 @using Telerik.Sitefinity.Web.DataResolving;
+@using Telerik.Sitefinity.RelatedData;
+@using Telerik.Sitefinity.Model;
+@using Telerik.Sitefinity.Libraries.Model;
+@using Telerik.Sitefinity.Modules.Libraries;
 
 @Html.Script(ScriptRef.JQuery, "top", false)
 
 <section class="post_lst @Model.CssClass">
-    <ul>
+    <ul class="no-bullet">
 
         @foreach (var item in Model.Items)
         {
             var navigateUrl = HyperLinkHelpers.GetDetailPageUrl(item, ViewBag.DetailsPageId, ViewBag.OpenInSamePage, Model.UrlKeyPrefix);
+            var image = item.DataItem.GetRelatedItems<Image>("Images").FirstOrDefault();
+
             <li @Html.InlineEditingAttributes(Model.ProviderName, Model.ContentType.FullName, (Guid) item.Fields.Id)>
-                <aritcle class="post_lst-itm">
-                    <h1 class="post_lst-itm-hdg">
-                        <a @Html.InlineEditingFieldAttributes("Title", "ShortText") href="@navigateUrl">@item.Fields.Title</a>
-                    </h1>
-                    <div class="post_lst-itm-meta">
-                        @item.GetDateTime("PublicationDate", "MMM d, yyyy, HH:mm tt")
-                        @Html.Resource("By")
-                        @DataResolver.Resolve(item.DataItem, "Author", null)
-                        @Html.CommentsCount((string) navigateUrl, item.DataItem)
+                <aritcle class="post_lst-itm media-object">
+                    @if (image != null)
+                    {
+                        <div class="post_itm-img media-object-section">
+                            <div class="thumbnail">
+                                <img src="@image.ResolveThumbnailUrl("art400x300",true)" alt="@item.Fields.Title" />
+                            </div>
+                        </div>
+                    }
+                    <div class="media-object-section">
+                        <h1 class="post_lst-itm-hdg">
+                            <a @Html.InlineEditingFieldAttributes("Title", "ShortText") href="@navigateUrl">@item.Fields.Title</a>
+                        </h1>
+                        <div class="post_lst-itm-meta">
+                            <div>
+                                @item.GetDateTime("PublicationDate", "MMM d, yyyy, H:mm tt")
+                                @Html.Resource("By")
+                                @DataResolver.Resolve(item.DataItem, "Author", null)
+                            </div>
+                            @Html.CommentsCount((string) navigateUrl, item.DataItem)
+                        </div>
+                        <p @Html.InlineEditingFieldAttributes("Summary", "ShortText") class="post_lst-desc">@Html.Raw(item.Fields.Summary)</p>
+                        <a href="@navigateUrl" class="button small">@Html.Resource("FullStory")</a>
                     </div>
-                    <div @Html.InlineEditingFieldAttributes("Summary", "ShortText") class="post_lst-desc">@Html.Raw(item.Fields.Summary)</div>
-                    <a href="@navigateUrl" class="button small">@Html.Resource("FullStory")</a>
                 </aritcle>
             </li>
         }
