--- a/MVC/Views/LoginForm/LoginForm.LoginForm.cshtml
+++ b/MVC/Views/LoginForm/LoginForm.LoginForm.cshtml
@@ -55,7 +55,7 @@
                 @Html.ActionLink(Html.Resource("ForgottenPasword"), "ForgotPassword")
             }
 
-            <div><input type="submit" value='@Html.Resource("LoginFormLogInButton")' /></div>
+            <input type="submit" class="button" value='@Html.Resource("LoginFormLogInButton")' />
 
             if (Model.ExternalProviders != null && Model.ExternalProviders.Count() > 0)
             {
