--- a/assets/src/project/sass/main.scss
+++ b/assets/src/project/sass/main.scss
@@ -56,5 +56,9 @@
 
 //Import .scss files here
 
+@import 'mixins';
 @import '-modules/sf-fixes';
 @import '-modules/blogs';
+@import '-modules/social-share';
+@import '-ingram/base';
+
