--- a/MVC/Views/Event/Detail.EventDetails.cshtml
+++ b/MVC/Views/Event/Detail.EventDetails.cshtml
@@ -3,6 +3,7 @@
 @using Telerik.Sitefinity.Frontend.Events.Mvc.Helpers;
 @using Telerik.Sitefinity.Frontend.Mvc.Helpers;
 @using Telerik.Sitefinity.Web.DataResolving;
+@using SitefinityWebApp.Mvc.Helpers;
 
 <div class="@Model.CssClass" @Html.InlineEditingAttributes(Model.ProviderName, Model.ContentType.FullName, (Guid)Model.Item.Fields.Id)>
     <h3 class="sf-event-title">
