--- a/MVC/Views/FlatTaxonomy/FlatTaxonomy.SimpleList.cshtml
+++ b/MVC/Views/FlatTaxonomy/FlatTaxonomy.SimpleList.cshtml
@@ -1,15 +1,15 @@
 ﻿@model Telerik.Sitefinity.Frontend.Taxonomies.Mvc.Models.TaxonomyViewModel
 
-<ul class="@Model.CssClass sf-Tags">
+<ul class="vertical menu @Model.CssClass">
     @foreach (var taxa in Model.Taxa)
     {
         <li>
-            <a href="@taxa.Url">@taxa.Title</a>
-
-            @if (Model.ShowItemCount)
+            <a href="@taxa.Url">@taxa.Title @if (Model.ShowItemCount)
             {
-              @:(@taxa.Count)
-            }
+                @:(@taxa.Count)
+            }</a>
+
+
         </li>
     }
 </ul>
