--- a/MVC/Views/LoginStatus/LoginStatus.LoginName.cshtml
+++ b/MVC/Views/LoginStatus/LoginStatus.LoginName.cshtml
@@ -5,22 +5,23 @@
 
 @Html.Script(ScriptRef.JQuery, "top", false)
 
-<div class="@Model.CssClass">
+<div class="login_stat @Model.CssClass">
     <div data-sf-role="sf-logged-in-view" style="display: none">
         <span>@Html.Resource("LoggedAs") </span>
         <a href="@(Model.ProfilePageUrl ?? "#")" data-sf-role="sf-logged-in-name"></a>
-        @Html.ActionLink(Html.Resource("Logout"), "SignOut")
+        @Html.ActionLink(Html.Resource("Logout"), "SignOut",null, new { @class = "button" })
     </div>
 
     <div data-sf-role="sf-logged-out-view" style="display: none">
-        <a href="@(Model.LoginPageUrl ?? "#")">@Html.Resource("Login")</a>
-        <a href="@(Model.RegistrationPageUrl ?? "#")">@Html.Resource("RegisterNow")</a>
+        <a href="@(Model.LoginPageUrl ?? "#")" class="button">@Html.Resource("Login")</a>
+        <a href="@(Model.RegistrationPageUrl ?? "#")" class="button">@Html.Resource("RegisterNow")</a>
     </div>
+    <input type="hidden" data-sf-role="sf-status-json-endpoint-url" value="@Model.StatusServiceUrl" />
+    <input type="hidden" data-sf-role="sf-logout-redirect-url" value="@Model.LogoutPageUrl" />
+    <input type="hidden" data-sf-role="sf-is-design-mode-value" value="@ViewBag.IsDesignMode.ToString()" />
+    <input type="hidden" data-sf-role="sf-allow-windows-sts-login" value="@Model.AllowWindowsStsLogin.ToString()" />
+
+    @Html.Script(Url.WidgetContent("Mvc/Scripts/LoginStatus/login-status.js"), "bottom", false)
 </div>
 
-<input type="hidden" data-sf-role="sf-status-json-endpoint-url" value="@Model.StatusServiceUrl"/>
-<input type="hidden" data-sf-role="sf-logout-redirect-url" value="@Model.LogoutPageUrl"/>
-<input type="hidden" data-sf-role="sf-is-design-mode-value" value="@ViewBag.IsDesignMode.ToString()" />
-<input type="hidden" data-sf-role="sf-allow-windows-sts-login" value="@Model.AllowWindowsStsLogin.ToString()" />
 
-@Html.Script(Url.WidgetContent("Mvc/Scripts/LoginStatus/login-status.js"), "bottom", false)
