--- a/MVC/Views/SocialShare/SocialShareIconsWithText.cshtml
+++ b/MVC/Views/SocialShare/SocialShareIconsWithText.cshtml
@@ -7,130 +7,111 @@
     var pageTitle = SocialShareButtons.PageTitle;
 }
 
-@Html.StyleSheet(Url.WidgetContent("assets/dist/css/sf-social-share.min.css"), "head", false)
-
-<style>
-    .color {color: blue;}
-</style>
-
 <div class="@Model.CssClass">
-    <ul class="list-inline sf-social-share">
+    <ul class="soc_share">
         @foreach (var button in Model.SocialButtons)
         {
-            switch (button.ButtonName)
-            {
-                case "Facebook":
-                    <li>
-                        <div class='fb-share-button' data-href='@shareUrl' data-type='button_count'></div>
-                        <div id='fb-root'></div>
-                        <script>
-                            (function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) return; js = d.createElement(s); js.id = id; js.src = '//connect.facebook.net/en_EN/all.js#xfbml=1'; fjs.parentNode.insertBefore(js, fjs); }(document, 'script', 'facebook-jssdk'));
-                        </script>
-                    </li>
-                    break;
-                case "Twitter":
-                <li>
-                    <a href='https://twitter.com/share' title='Share on Twitter' class='twitter-share-button' data-url=@shareUrl data-count='horizontal'>
-                        Tweet
-                    </a>
-                    <script>
-                        !function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https'; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = p + '://platform.twitter.com/widgets.js'; fjs.parentNode.insertBefore(js, fjs); } }(document, 'script', 'twitter-wjs');
-                    </script>
-                </li>
-                    break;
-                case "LinkedIn":
-                <li>
-                    <script src="//platform.linkedin.com/in.js" type="text/javascript">
-                        lang: en_US
-                    </script>
-                    <script type="IN/Share" data-url='@shareUrl' data-counter="right">
-                    </script>
-                </li>
-                    break;
-                case "GooglePlusOne":
-                <li>
-                    <div class='g-plusone' data-size='medium'></div>
-                    <script type='text/javascript'>
-                        (function () { var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true; po.src = 'https://apis.google.com/js/platform.js'; var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s); })();
-                    </script>
-                </li>
-                    break;
-                case "Blogger":
-                <li>
-                    <a class="sf-share-button" href="#" onclick="window.open('https://www.blogger.com/blog_this.pyra?t&u=@shareUrl&n=@pageTitle', 'Blogger','toolbar=no,width=550,height=550'); return false" title="Share on Blogger">
-                        <span class="sf-icon-blogger"></span>
-                        <strong>Blogger</strong>
-                    </a>
-                </li>
-                    break;
-                case "Delicious":
-                <li>
-                    <a href="#" onclick="window.open('https://delicious.com/save?v=5&provider=Telerik&noui&jump=close&url='+encodeURIComponent(location.href)+'&title='+encodeURIComponent(document.title), 'delicious','toolbar=no,width=550,height=550'); return false;">
-                        <img src="https://delicious.com/img/logo.png" height="16" width="16" alt="Delicious"> Save this on Delicious
-                    </a>
-                </li>
-                    break;
-                case "Tumblr":
-                <li>
-                    <a href="http://www.tumblr.com/share" title="Share on Tumblr" style="display:inline-block; text-indent:-9999px; overflow:hidden; width:81px; height:20px; background:url('https://platform.tumblr.com/v1/share_1.png') top left no-repeat transparent;">Share on Tumblr</a>
-                </li>
-                    break;
-                case "GoogleBookmarks":
-                <li>
-                    <a class="sf-share-button" href="#" onclick="window.open('https://www.google.com/bookmarks/mark?op=add&bkmk=@shareUrl&title=@pageTitle', 'Google bookmarks','toolbar=no,width=550,height=550'); return false" title="Share on GoogleBookmarks">
-                        <span class="sf-icon-google"></span>
-                        <strong>Google Bookmarks</strong>
-                    </a>
-                </li>
-                    break;
-                case "Digg":
-                <li>
-                    <a class="sf-share-button" href="#" onclick="window.open('http://digg.com/submit?url=@shareUrl&title=@pageTitle', 'Digg','toolbar=no,width=550,height=550'); return false" title="Share on Digg">
-                        <span class="sf-icon-digg"></span> <strong>Digg</strong>
-                    </a>
-                </li>
-                    break;
-                case "MySpace":
-                <li>
-                    <a class="sf-share-button" href="#" onclick="window.open('http://myspace.com/Modules/PostTo/Pages/?u=@shareUrl&t=@pageTitle', 'My Space','toolbar=no,width=550,height=550'); return false" title="Share on MySpace">
-                        <span class="sf-icon-myspace"></span>
-                        <strong>MySpace</strong>
-                    </a>
-                </li>
-                    break;
-                case "StumbleUpon":
-                <li>
-                    <!-- Place this tag where you want the su badge to render -->
-                    <su:badge layout="2"></su:badge>
-
-                    <!-- Place this snippet wherever appropriate -->
-                    <script type="text/javascript">
-                        (function () {
-                            var li = document.createElement('script'); li.type = 'text/javascript'; li.async = true;
-                            li.src = ('https:' == document.location.protocol ? 'https:' : 'http:') + '//platform.stumbleupon.com/1/widgets.js';
-                            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(li, s);
-                        })();
-                    </script>
-
-                </li>
-                    break;
-                case "Reddit":
-                <li>
-                    <a href="//www.reddit.com/submit" onclick="window.location = '//www.reddit.com/submit?url=' + encodeURIComponent(window.location); return false"> <img src="//www.redditstatic.com/spreddit7.gif" alt="submit to reddit" border="0" /> </a>
-                </li>
-                    break;
-
-                case "MailTo":
-                <li>
-                    <a href="mailto:?body=@shareUrl&subject=@pageTitle" class="sf-share-button" title="Tell a friend">
-                        <span class="sf-icon-mailto"></span>
-                        <strong>Email</strong>
-                    </a>
-                </li>
-                    break;
-                default:
-                    break;
-            }
+        switch (button.ButtonName)
+        {
+        case "Facebook":
+        <li>
+            <a class="button popup facebook" href="https://www.facebook.com/sharer/sharer.php?u=@shareUrl" title="Facebook">
+                <i class="fa fa-facebook" aria-hidden="true"></i> <span>Facebook</span>
+            </a>
+        </li>
+        break;
+        case "Twitter":
+        <li>
+            <a class="button popup twitter" href="http://twitter.com/share?url=@shareUrl" data-reveal-id="myModal" data-reveal-ajax="true">
+                <i class="fa fa-twitter" aria-hidden="true"></i> <span>Twitter</span>
+            </a>
+        </li>
+        break;
+        case "LinkedIn":
+        <li>
+            <a class="button popup linkedin" href="http://www.linkedin.com/shareArticle?mini=true&amp;url=@shareUrl&amp;title=@pageTitle" title="LinkedIn">
+                <i class="fa fa-linkedin" aria-hidden="true"></i> <span>LinkedIn</span>
+            </a>
+        </li>
+        break;
+        case "GooglePlusOne":
+        <li>
+            <a class="button popup googleplus" href="https://plus.google.com/share?url=@shareUrl" title="Google+">
+                <i class="fa fa-google-plus" aria-hidden="true"></i> <span>Google+</span>
+            </a>
+        </li>
+        break;
+        case "Blogger":
+        <li>
+            <a class="button popup blogger" href="https://www.blogger.com/blogger.g?t&u=@shareUrl&n=@pageTitle" title="Blogger">
+                <i class="fa fa-rss" aria-hidden="true"></i> <span>Blogger</span>
+            </a>
+        </li>
+        break;
+        case "Delicious":
+        <li>
+            <a class="button popup delicious" href="https://delicious.com/save?v=5&noui&jump=close&url='+encodeURIComponent(location.href)+'&title='+encodeURIComponent(document.title)" title="Sahre on Delicious">
+                <i class="fa fa-delicious" aria-hidden="true"></i> <span>Delicious</span>
+            </a>
+        </li>
+        break;
+        case "Tumblr":
+        <li>
+            <a class="button popup tumblr" href="http://tumblr.com/share/link?url=@shareUrl&name=@pageTitle" title="Tumblr">
+                <i class="fa fa-tumblr" aria-hidden="true"></i> <span>Tumblr</span>
+            </a>
+        </li>
+        break;
+        case "GoogleBookmarks":
+        <li>
+            <a class="button popup google" href="https://www.google.com/bookmarks/mark?op=add&bkmk=@shareUrl&title=@pageTitle" title="GoogleBookmarks">
+                <i class="fa fa-bookmark" aria-hidden="true"></i> <span>Google Bookmarks</span>
+            </a>
+        </li>
+        break;
+        case "Digg":
+        <li>
+            <a class="button popup digg" href="http://digg.com/submit?url=@shareUrl&title=@pageTitle" title="Digg">
+                <i class="fa fa-digg" aria-hidden="true"></i> <span>Digg</span>
+            </a>
+        </li>
+        break;
+        case "MySpace":
+        <li>
+            <a class="button popup myspace" href="http://myspace.com/Modules/PostTo/Pages/?u=@shareUrl&t=@pageTitle" title="MySpace">
+                <i class="fa fa-users" aria-hidden="true"></i> <span>MySpace</span>
+            </a>
+        </li>
+        break;
+        case "StumbleUpon":
+        <li>
+            <a class="button popup stumbleupon" href="http://stumbleupon.com/submit?url=@shareUrl&title=@pageTitle" title="StumbleUpon">
+                <i class="fa fa-stumbleupon" aria-hidden="true"></i> <span>StumbleUpon</span>
+            </a>
+        </li>
+        break;
+        case "Reddit":
+        <li>
+            <a class="button popup reddit" href="http://www.reddit.com/submit?newwindow=1&url=@shareUrl&title=@pageTitle" title="Reddit">
+                <i class="fa fa-reddit-alien" aria-hidden="true"></i> <span>Reddit</span>
+            </a>
+        </li>
+        break;
+        case "MailTo":
+        <li>
+            <a class="button email" href="mailto:?body=@shareUrl&subject=@pageTitle" title="Send via email">
+                <i class="fa fa-envelope-o" aria-hidden="true"></i> <span>Email</span>
+            </a>
+        </li>
+        break;
+        default:
+        break;
         }
+        }
+        <li>
+            <a class="button print secondary" href="javascript:window.print()">
+                <i class="fa fa-print" aria-hidden="true"></i> <span>Print</span>
+            </a>
+        </li>
     </ul>
 </div>
